# hpc-repo

./: .gitignore  README.md
01_neoverse-n1/aarch64_micro/: Makefile  driver_asimd.cpp
02_bits/: arrays_and_pointers.cpp  bits.cpp  tasks.txt
03_pipelining/: task_4.txt
03_pipelining/aarch64_micro/: Makefile
04_small-gemms/: CMakeLists.txt  loesungen.md  task_4.txt
04_small-gemms/catch/: CMakeLists.txt
04_small-gemms/small-gemms/: CMakeLists.txt
04_small-gemms/small-gemms/include/: gemm-ref.h  gemm_compiler_32_32_32_32_32_32.h
04_small-gemms/small-gemms/src/: driver-small-gemms.cpp  gemm-ref.cpp  gemm_compiler_32_32_32_32_32_32.cpp
04_small-gemms/test/: CMakeLists.txt  small-gemms-tests.cpp
05_Writing_Assembly_Code_AArch64/: driver.cpp  load_store_example.s  loesungen.md
05_Writing_Assembly_Code_AArch64/copy_data/: Makefile  copy.c  copy_asm.s  copy_c.s  copy_compile_to_assembly.s  copy_disassembled.s  driver_copy.cpp
05_Writing_Assembly_Code_AArch64/gdb_and_valgrind/: Makefile  driver.cpp  info_registers.xcf  load.s
05_Writing_Assembly_Code_AArch64/load_store_example/: Makefile  driver.cpp  hexdump_executable  hexdump_object_file  load_store_example.s
05_Writing_Assembly_Code_AArch64/matrix_kernel/: Makefile  driver_gemm_asm_gp.cpp  gemm_asm_gp.s
06_Assembly_Building_Blocks/: Makefile  driver_gemm_asm_sve.cpp  gemm_asm_sve_64_6_1.s  loesungen.md
06_Assembly_Building_Blocks/small_gemm_unrolled_sve/: Makefile  driver_gemm_asm_sve.cpp  gemm_asm_sve_64_6_1.s  gemm_asm_sve_64_6_1_opt.s  gemm_asm_sve_64_6_48.s  gemm_asm_sve_64_6_48_opt.s
07_Small GEMMs:_SVE/: loesungen.md
07_Small GEMMs:_SVE/small_gemm_unrolled_sve_extended/: Makefile  driver_gemm_asm_sve.cpp  gemm_asm_sve_128_48_48.s  gemm_asm_sve_128_6_48.s  gemm_asm_sve_63_6_48.s  gemm_asm_sve_m_6_48.s
07_Small GEMMs:_SVE_v2/: Makefile  driver.cpp
07_Small GEMMs:_SVE_v2/kernels/: gemm_asm_sve_128_6_48.s  gemm_asm_sve_64_64_64.s  gemm_asm_sve_64_6_1.s  gemm_asm_sve_64_6_48.s
07_Small_GEMMs:_SVE/: loesungen.md
07_Small_GEMMs:_SVE/small_gemm_unrolled_sve_extended/: gemm_asm_sve_128_6_48.s
07_Small_GEMMs_SVE/small_gemm_unrolled_sve_extended/: driver_gemm_asm_sve.cpp
08_Recent_Features:_A_Sneak_Peek/: loesungen.md
08_Recent_Features:_A_Sneak_Peek/SVE2/: Makefile  driver.cpp  eor.s  eor3.s  fmlalb.s  fmlalb_fmlalt.s  fmlalx.s
08_Recent_Features_A_Sneak_Peek/: loesungen.md
08_Recent_Features_A_Sneak_Peek/SVE2/: Makefile  fmlalx.s
09_BFloat16_Extensions/: loesungen.md
10_JITed_Kernels_in_Praxis/: loesungen.md
11_Back_to_the_Compiler/: loesungen.md
12_OpenMP/: loesungen.md
bits/: arrays_and_pointers  bits
small-gemms/small-gemms/: CMakeLists.txt
small-gemms/small-gemms/src/: driver-small-gemms.cpp
small-gemms/test/: CMakeLists.txt  small-gemms-tests.cpp
(+38 files in other folders)
